# aetherial-realms

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  server.js  settings.json  tsconfig.json  vcpkg.json
.cache/clangd/index/: main.cpp.A9A2F5C4A8211A00.idx
public/: index.html
src/: App.js  App.tsx  main.cpp
src/interface/MainUI/: Bottom.js  Bottom.tsx  MainGame.css  MainGame.js  MainGame.tsx  MainUI.js  MainUI.tsx  MainUIStyles.css  NewMainGame.tsx
src/interface/Map/: Map.js  MapStyles.css
src/models/: BASEmodel.glb  BaseMesh_Anim.glb  CasualFemale.glb  CasualMale.glb
src/types/: custom.d.ts
